# OmniInv

./: .env  .env_example  .gitattributes  .gitignore  .pylintrc  README.md  build.sh  docker-compose.yml  log_conf.yaml  pyproject.toml
app/: __init__.py  dependencies.py  jwt.py  logger.py  schemas.py
app/api/: __init__.py
app/api/auth/: __init__.py  auth_router.py  auth_service.py
app/constans/: __init__.py  _status.py
app/core/: __init__.py  _connection.py
app/external_services/: _redis.py
app/lib/authentication/: authentication_protocol.py
app/models/: __init__.py  _category.py  _currency.py  _dispatch_order_details.py  _dispatch_orders.py  _dispatch_route_assignments.py  _dispatch_routes.py  _error_logs.py  _formats.py  _image.py  _inventory.py  _inventory_movements.py  _inventory_shrinkage.py  _make.py  _model.py  _partner.py  _partner_type.py  _product.py  _product_image.py  _purchese_order_detail.py  _purchese_orders.py  _quality.py  _rate.py  _shrinkage_reasons.py  _state_flow.py  _status.py  _unit_measure.py  _warehouses.py  base.py
app/models/auth_user/: __init__.py  _credential.py  _group.py  _permissions.py  _permissions_level.py  _profile.py  _profile_rol.py  _rol.py  _user.py  _user_auth.py  _user_group.py  _user_reports.py
app/utils/: hash_key.py  key_builder.py  password_encripter.py  random_code.py  save_error_log.py  sorting_request.py
deployment/image/: Dockerfile
deployment/nginx/: nginx.conf
deployment/scripts/: start_service.sh
deployment/secrets/: id_rsa  id_rsa.pub
sql/: MaestroProductos.sql  database.sql
